# RSP-FinalProject-UR5-Gazebo

./: .gitignore  README.md
bringup/bringup/: CMakeLists.txt  package.xml
bringup/bringup/launch/: simulation_moveit_bringup.launch.py
communication/: README.md  install.sh
communication/gpt_bridge/: CMakeLists.txt  package.xml
communication/gpt_bridge/src/: gpt_bridge_node.cpp
communication/gpt_interface/: CMakeLists.txt  package.xml
communication/gpt_ros/: package.xml  setup.cfg  setup.py
communication/gpt_ros/gpt_ros/: gpt_config.py  gpt_ros2_client.py  gpt_ros2_server.py
control/move_robot/: CMakeLists.txt  package.xml
control/move_robot/src/: move_robot_node.cpp
control/ur5_gripper_moveit_config/: CMakeLists.txt  README.md  package.xml
control/ur5_gripper_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  rviz_config.rviz  table.scene  ur.srdf
control/ur5_gripper_moveit_config/launch/: ur5_gripper_planning_execution.launch.py
rtt/rtt_ur_trajectory/: CMakeLists.txt  package.xml
rtt/rtt_ur_trajectory/include/rtt_ur_trajectory/: rtt_ur_trajectory_robot.hpp
rtt/rtt_ur_trajectory/launch/: rtt_ur_trajectory.launch.py
rtt/rtt_ur_trajectory/scripts/: robot.ops
rtt/rtt_ur_trajectory/src/: rtt_ur_trajectory_robot.cpp
simulation/: README.md
simulation/ur_simulation/: README.md
simulation/ur_simulation/sim_plugin/: CMakeLists.txt  package.xml
simulation/ur_simulation/ur_gazebo/: CMakeLists.txt  package.xml
simulation/ur_simulation/ur_gazebo/config/: controller_configuration.yaml
simulation/ur_simulation/ur_gazebo/launch/: ur_simulation.launch.py
simulation/ur_simulation/ur_gazebo/rviz/: view_robot.rviz
simulation/ur_simulation/ur_gazebo/src/: joint_state_mirror.cpp
simulation/ur_simulation/ur_gazebo/urdf/: robotiq_gripper.xacro  ur.urdf.xacro  ur_sim_camera.xacro
simulation/ur_simulation/ur_gazebo/world/: ur_simulation_world.sdf
test/: Point_Cup.py
visual/: README.md  installation.txt
visual/igr_vision_services/: package.xml  setup.cfg  setup.py
visual/igr_vision_services/config/: vision.yaml
visual/igr_vision_services/igr_vision_services/: stereo_vision_service.py  stereo_vision_test_client.py  text_prompt_vision.py  text_prompt_vision_service.py  text_prompt_vision_test_client.py
visual/igr_vision_services/launch/: vision.launch.py
visual/vision_interfaces/: CMakeLists.txt  package.xml
visual/vision_interfaces/srv/: GetFeatures.srv  GetStereo.srv
visual/zero_shot_detection/: installation.txt  zero_shot_detector.py
visual/zero_shot_vision/: zero_shot_detector.py  zero_shot_vision.py
